<resources>
    <string name="app_name">ProgrammingArea</string>
    <string name="full_name">Full Name</string>
    <string name="region">Region</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title">Programming\nArea</string>

    <string-array name="programming_languages">
        <item>Programming Language</item>
        <item>Java Script</item>
        <item>Python</item>
        <item>Java</item>
        <item>Kotlin</item>
    </string-array>

    <string-array name="game_type">
        <item>Game Mode</item>
        <item>Quiz Mode</item>
        <item>Code Fight Mode</item>
    </string-array>
</resources>