<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/emailRegisterInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corrner_edittext"
        android:backgroundTint="@color/deep_green"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegisterInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordRegisterInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/rounded_corrner_edittext"
        android:backgroundTint="@color/deep_green"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/loginSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginSubmitButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/deep_green"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/deep_green"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailRegisterInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />
</androidx.constraintlayout.widget.ConstraintLayout>